# M3_L2

L2_views/views/: pyproject.toml
L2_views/views/blog/: admin.py  forms.py  mixins.py  models.py  urls.py  validators.py  views.py
L2_views/views/blog/api/: filters.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
L2_views/views/blog/templates/blog/: author_detail.html  base.html  comment_create.html  comment_delete.html  contacts.html  index.html  navbar.html  post_create.html  post_delete.html  post_details.html  post_edit.html  post_list.html  post_pagination.html
L2_views/views/config/: settings.py  urls.py
L2_views/views/my_app/: models.py  urls.py  views.py
L2_views/views/my_app/templates/my_app/: base.html  edit_create_model_form.html  index.html  models.html  navbar.html  one_model.html
L2_views/views/static/css/: style.css
L2_views/views/users/: admin.py  forms.py  models.py  urls.py  views.py
L2_views/views/users/templates/users/: login.html  profile.html  register.html
